k8s/yatc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yatc-ingress
spec:
  rules:
  - host: yatc-alloy
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: yatc-alloy
            port:
              number: 12345
  - host: yatc-prometheus
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: yatc-prometheus
            port:
              number: 9090
  - host: yatc-grafana
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: yatc-grafana
            port:
              number: 3000
  - host: yatc-keycloak
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: yatc-keycloak
            port:
              number: 80
  - host: yatc-site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gw-spring-cloud
            port:
              number: 8080
